app/.externalNativeBuild/cmake/debug/x86_64/android_gradle_build_native-lib_x86_64.stdout.txt
[1/7] Building CXX object CMakeFiles/native-lib.dir/Camera.cpp.o
[2/7] Building CXX object CMakeFiles/native-lib.dir/object/Object.cpp.o
[3/7] Building CXX object CMakeFiles/native-lib.dir/object/Cube.cpp.o
[4/7] Building CXX object CMakeFiles/native-lib.dir/native-lib.cpp.o
[5/7] Building CXX object CMakeFiles/native-lib.dir/background/Background.cpp.o
FAILED: CMakeFiles/native-lib.dir/background/Background.cpp.o 
/home/yuanbin/tools/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=x86_64-none-linux-android24 --gcc-toolchain=/home/yuanbin/tools/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/yuanbin/tools/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dnative_lib_EXPORTS -I/home/yuanbin/workspace/OpenGLNative/app/src/main/cpp/../../external -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -Wa,--noexecstack -Wformat -Werror=format-security -stdlib=libc++ -std=c++11 -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/background/Background.cpp.o -MF CMakeFiles/native-lib.dir/background/Background.cpp.o.d -o CMakeFiles/native-lib.dir/background/Background.cpp.o -c /home/yuanbin/workspace/OpenGLNative/app/src/main/cpp/background/Background.cpp
/home/yuanbin/workspace/OpenGLNative/app/src/main/cpp/background/Background.cpp:69:13: error: expected ';' after expression
glGetError()
            ^
            ;
1 error generated.
[6/7] Building CXX object CMakeFiles/native-lib.dir/TestSurface.cpp.o
ninja: build stopped: subcommand failed.
